--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                         </span>
                     </div>
                     <div class="menu navbar-right links">
-                        <a class="menu-item" href="/">首页</a> ·
-                        <a href="#">博客</a>
+                        <a class="menu-item" href="https://wolfnetwork.asia">Team</a> ·
+                        <a href="https://how8.github.io">博客</a>
                         <center>
                             <div id="header"></div>
                             <div id="main">
