--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     </div>
                     <div class="menu navbar-right links">
                         <a class="menu-item" href="https://wolfnetwork.asia">Team</a> ·
-                        <a href="https://how8.github.io">博客</a>
+                        <a href="https://how8.gitee.io">博客</a>
                         <center>
                             <div id="header"></div>
                             <div id="main">
